cmake_minimum_required(VERSION 4.1)
project(Leetcode)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_STANDARD 17)

add_executable(Leetcode main.cpp)

add_executable(01 01.c)

add_executable(04 04.c)

add_executable(15 15.c)

add_executable(16 16.c)

add_executable(18 18.c)

add_executable(19 19.c)

add_executable(20 20.cpp)

add_executable(29 29.c)

add_executable(40 40.c)